Forgot to uncomment a thing